--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,4 +42,4 @@ jobs:
         draft: true
         files: |
           dist/${{ steps.dist.outputs.whl }}
-          dist/${{ steps.dist.outputs.tar.gz }}
+          dist/${{ steps.dist.outputs.targz }}
